--- a/payment-card-anomaly-detector/pom.xml
+++ b/payment-card-anomaly-detector/pom.xml
@@ -73,14 +73,25 @@ under the License.
 		</dependency>
 		<dependency>
             <groupId>org.apache.flink</groupId>
-            <artifactId>flink-connector-kafka_2.12</artifactId>
-            <version>1.13.2</version>
+            <artifactId>flink-connector-kafka</artifactId>
+            <version>3.1.0-1.18</version>
         </dependency>
         <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-clients</artifactId>
             <version>3.7.0</version>
         </dependency>
+		<dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.17.1</version>
+        </dependency>
+		<dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.17.1</version>
+        </dependency>
+        
 
 		<!-- Add connector dependencies here. They must be in the default scope (compile). -->
 
