--- a/payment-card-anomaly-detector/pom.xml
+++ b/payment-card-anomaly-detector/pom.xml
@@ -91,6 +91,11 @@ under the License.
             <artifactId>jackson-databind</artifactId>
             <version>2.12.4</version>
         </dependency>
+		<dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>4.0.0</version>
+        </dependency>
         
 
 		<!-- Add connector dependencies here. They must be in the default scope (compile). -->
